--- a/src/index.css
+++ b/src/index.css
@@ -120,8 +120,8 @@
   }
 }
 body {
+  overflow: hidden;
   font-family: 'Handlee', cursive;
   font-weight: 400;
   font-style: normal;
-  background: linear-gradient(120deg, rgba(246, 249, 253, 1) 50%, rgba(227, 234, 255, 1) 95%);
 }
